--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698433448-software-engineer-square-capital-full-stack'>Square Software Engineer, Square Capital - Full Stack | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -62,7 +66,7 @@
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://idana.join.com/jobs/464256-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -102,7 +106,7 @@
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -110,11 +114,11 @@
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/Dqtwu1Oz1c/FullStack-Cloud-Engineer-JavaAWS'>Full-Stack Cloud Engineer (Java/AWS) - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/Dqtwu1Oz1c/FullStack-Cloud-Engineer-JavaAWS'>Full-Stack Cloud Engineer (Java/AWS) - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -126,11 +130,11 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/si/jobs/1936788'>Job Application for Senior Full-Stack Software Engineer at SimplyInsured</a></h5> 
 <p><span class="badge badge-light">San Francisco  United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Linx.recruiterbox.com/jobs/fk03i2j'>
+<h5><a href='http://Linx.recruiterbox.com/jobs/fk03i2j'>
     Desenvolvedor Full Stack SR at Linx
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -211,7 +215,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hellooffice/4f50a433-d86b-4f1a-8f01-1e37bbd50c55'>HelloOffice - Full Stack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/hellooffice/4f50a433-d86b-4f1a-8f01-1e37bbd50c55'>HelloOffice - Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -223,7 +227,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">Chicago, Illinois  Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://devjobs.at/job/19700170099'>Full Stack Developer - devjobs.at</a></h5> 
+<h5><a href='https://devjobs.at/job/19700170099'>Full Stack Developer - devjobs.at</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -259,7 +263,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277354-developpeur-fullstack-java'>VISIAN D?veloppeur Fullstack Java | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VISIAN/743999698277354-developpeur-fullstack-java'>VISIAN D?veloppeur Fullstack Java | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -318,7 +322,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Kirkland, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698255176-es-full-stack-developer'>Devoteam ES - Full Stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698255176-es-full-stack-developer'>Devoteam ES - Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -330,7 +334,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://structure-studios.breezy.hr/p/cb8cbd2183a9-full-stack-developer'>Full Stack Developer at Structure Studios</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://structure-studios.breezy.hr/p/cb8cbd2183a9-full-stack-developer'>Full Stack Developer at Structure Studios</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -420,7 +424,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4306100002'>Job Application for D?veloppeur full stack, place de march? / Full Stack Developer, Marketplace Core at AppDirect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appdirect/jobs/4306100002'>Job Application for D?veloppeur full stack, place de march? / Full Stack Developer, Marketplace Core at AppDirect</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -440,7 +444,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/inrix/job/o8epbfwG'>INRIX Careers - Full Stack Software Development Engineer</a></h5> 
 <p><span class="badge badge-light">Kirkland, Washington</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -460,10 +464,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
       D?veloppeur Full-Stack H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/newfrontinsurance/4deca75d-9ba5-4976-8164-0870e49719ce'>Newfront Insurance - Full Stack Engineer (Portland)</a></h5> 
-<p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
